--- a/playbooks/roles/firewall/tasks/main.yml
+++ b/playbooks/roles/firewall/tasks/main.yml
@@ -2,7 +2,12 @@
 - name: Firewall software
   include_vars: "{{ item }}"
   with_first_found:
+    - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+    # Ubuntu-16, Debian-9, CentOS-6
+    - "{{ ansible_distribution }}.yml"
+    # Ubuntu, Debian, CentOS
     - "{{ ansible_os_family }}.yml"
+    # Debian, RedHat
     - "default.yml"
 
 - action: >
@@ -26,6 +31,8 @@
     to_port: "22"
     proto:   "tcp"
     rule:    "allow"
+  when: (ansible_os_family != 'RedHat')
+  # Error message in CentOS: problem running
 
 - name: Ensure UFW is enabled and denies by default
   ufw:
