--- a/playbooks/roles/os_misc/tasks/main.yml
+++ b/playbooks/roles/os_misc/tasks/main.yml
@@ -2,8 +2,21 @@
 - name: OS misc packages
   include_vars: "{{ item }}"
   with_first_found:
+    - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+    # Ubuntu-16, Debian-9, CentOS-6
+    - "{{ ansible_distribution }}.yml"
+    # Ubuntu, Debian, CentOS
     - "{{ ansible_os_family }}.yml"
+    # Debian, RedHat
     - "default.yml"
+
+# Debian Wheezy backports repository
+- apt_repository:
+    repo: 'deb http://ftp.debian.org/debian wheezy-backports main'
+    state: present
+    update_cache: yes
+  when: ( ansible_os_family == 'Debian'
+          and ansible_distribution_major_version == '7')
 
 - action: >
     {{ ansible_pkg_mgr }} name={{ item }} state=latest update_cache=yes
