--- a/playbooks/roles/security/tasks/main.yml
+++ b/playbooks/roles/security/tasks/main.yml
@@ -2,7 +2,12 @@
 - name: Ensuring that security packages are up to date
   include_vars: "{{ item }}"
   with_first_found:
+    - "{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+    # Ubuntu-16, Debian-9, CentOS-6
+    - "{{ ansible_distribution }}.yml"
+    # Ubuntu, Debian, CentOS
     - "{{ ansible_os_family }}.yml"
+    # Debian, RedHat
     - "default.yml"
 
 - action: >
