VPN profile: completed. Listens on local interface. TODO: script to issue client certificates on each Linux flavour.

--- a/playbooks/roles/vpn/handlers/main.yml
+++ b/playbooks/roles/vpn/handlers/main.yml
@@ -3,5 +3,6 @@
   service: name="{{ openvpn_service }}" state=restarted
 
 - name: restart openvpn daemon-reload
-  service: name="{{ openvpn_service }}" state=restarted daemon_reload=yes
-  when: ansible_service_mgr = 'systemd'
+  command: systemctl daemon-reload
+  #service: name="{{ openvpn_service }}" state=restarted daemon_reload=yes
+  when: (ansible_service_mgr == 'systemd')
