--- a/playbooks/roles/vpn/vars/Debian-9.yml
+++ b/playbooks/roles/vpn/vars/Debian-9.yml
@@ -24,6 +24,14 @@ openvpn_templates:
     mode:  '0600'
     notify:
       - restart openvpn
+  - name:  "{{ openvpn_config }}/openssl.cnf" # For OpenSSL > 1.0
+    src:   'Debian/openssl-1.0.0.cnf.j2'
+    dest:  "{{ openvpn_config }}/openssl.cnf"
+    owner: 'root'
+    group: 'root'
+    mode:  '0644'
+    notify:
+      - restart openvpn
 
 openvpn_easyrsa_folder:
   - src:   '/usr/share/easy-rsa/*'
